[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Terrain/Obstacles/Havit/Havit.png" type="Texture" id=1]
[ext_resource path="res://src/Obstacles/Havit/Havit.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform float radius = 5.0;
uniform float amount = 0.25;

void fragment() {
	float r = radius;
	vec2 ps = TEXTURE_PIXEL_SIZE;
	vec4 col = texture(TEXTURE, UV);
	vec4 glow = col;

	glow += texture(TEXTURE, UV + vec2(-r, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(-r, 0.0) * ps);
	glow += texture(TEXTURE, UV + vec2(-r, r) * ps);
	glow += texture(TEXTURE, UV + vec2(0.0, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(0.0, r) * ps);
	glow += texture(TEXTURE, UV + vec2(r, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(r, 0.0) * ps);
	glow += texture(TEXTURE, UV + vec2(r, r) * ps);

	r *= 2.0;
	glow += texture(TEXTURE, UV + vec2(-r, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(-r, 0.0) * ps);
	glow += texture(TEXTURE, UV + vec2(-r, r) * ps);
	glow += texture(TEXTURE, UV + vec2(0.0, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(0.0, r) * ps);
	glow += texture(TEXTURE, UV + vec2(r, -r) * ps);
	glow += texture(TEXTURE, UV + vec2(r, 0.0) * ps);
	glow += texture(TEXTURE, UV + vec2(r, r) * ps);

	glow /= 17.0;
	glow *= amount;
	col.rgb *= col.a;

	COLOR = glow + col;
}



"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/radius = 5.0
shader_param/amount = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.5223, 28.1398 )

[node name="Obstacle1" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Area2D"]
material = SubResource( 2 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -1.76056, 18.4853 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1.76056, 18.4853 )
shape = SubResource( 3 )
[connection signal="mouse_entered" from="KinematicBody2D" to="KinematicBody2D" method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="KinematicBody2D" method="_on_KinematicBody2D_mouse_exited"]
[connection signal="input_event" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_mouse_exited"]
